<resources>
    <string name="app_name">Famous</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="signup">No account yet? Create one</string>
    <string name="username">Username</string>
    <string name="sign">Sign Up</string>
    <string name="productimage">productimage</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="error_message_name">Enter UserName</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="technical_details">Technical Details</string>
    <string name="item_weight">Item Weight:</string>
    <string name="product_dimensions">Product Dimensions:</string>
    <string name="google_maps_key">AIzaSyAVuPC5FcqNuKNOqUr4Uhlnk5vuh1yHktA</string>
    <string name="website">Website</string>

</resources>
