<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_product_details">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryLogin"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_product_price" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/txv_product_name"/>

    <TextView
        android:id="@+id/txv_product_desscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/txv_product_desscription"/>

    <TextView
        android:id="@+id/txv_tech_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technical_details"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"/>

    <TextView
        android:id="@+id/txv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_weight"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_tech_details"/>

    <TextView
        android:id="@+id/txv_product_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="weight"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txv_weight"
        app:layout_constraintRight_toLeftOf="@+id/txv_weight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_dimensions"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_weight"/>

    <TextView
        android:id="@+id/txv_product_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dimen"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txv_dimension"
        app:layout_constraintRight_toLeftOf="@+id/txv_dimension"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="150dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>




        <!--

        <RelativeLayout
            android:id="@+id/rl_technical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_marginLeft="@dimen/padd_10"
            android:layout_marginTop="@dimen/padd_10">


        </RelativeLayout>-->





</androidx.core.widget.NestedScrollView>